2006-10-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: correct takes_ownership in arrays
	* vala/valacodegenerator.vala: add limited support for array length
	  fields, store array length from array creation expression, copy array
	  length in array assignments
	* vala/valafield.vala: support NoArrayLength attribute
	* compiler/valacompiler.vala: add NoArrayLength attribute to option
	  arrays

2006-10-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala, vala/valasemanticanalyzer.vala: specify
	  array element type as type argument
	* vala/valacodegenerator.vala: create declarations for array length
	  variables, iterate over arrays by index if it has known length
	* vala/valacharacterliteral.vala: correct return type of get_char
	* vala/valanamespace.vala: process enums and flags first
	* vala/valavariabledeclarator.vala: set parent_node of initializer, add
	  replace method
	* tests/test-023.vala: test list construction
	* tests/Makefile.am: update

2006-10-03  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala: don't use InstanceCast for callbacks

2006-09-28  Raffaele Sandrini <rasa@gmx.ch>

	* vala/valacodegenerator.vala, vala/valasemanticanalyzer.vala,
	  vala/valamemorymanager.vala: add one dimensional array assignment
	  support
	* tests/test-022.vala: testcase for array creation/assignment
	* tests/Makefile.am: update

2006-09-28  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add and improve various types

2006-09-28  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: set attributes also for non-readable properties
	* vala/valacodegenerator.vala: support interface signals
	* vala/valainvocationexpression.vala,
	  vala/valaobjectcreationexpression.vala: fix problem when children
	  change while iterating over them

2006-09-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valainterfacewriter.vala,
	  vala/valamethod.vala: support InstanceByReference attribute