@@ -5,8 +5,13 @@ class Maman.Foo {
 		stdout.printf ("String + operator: 1");
 		
 		stdout.printf (" 2" + " 3");
+		
+		string s = " 4";
+		s += " 5";
+		
+		stdout.printf ("%s", s);
 	
-		stdout.printf (" 4\n");
+		stdout.printf (" 6\n");
 
 		return 0;
 	}
