@@ -1,3 +1,11 @@
+2006-10-05  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valasemanticanalyzer.vala: transform compund assignments into
+	  simple assignments
+	* vala/valabinaryexpression.vala: add default argument to construction
+	  method
+	* tests/test-021.vala: test string += assignment
+
 2006-10-04  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valasymbolresolver.vala: correct takes_ownership in arrays
